# Clubmate-AI

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  client.py  customtypes.py  db.py  fib.py  main.py  pyproject.toml  requirements.txt  server.py  types.py  weather.py
RAG/: ingest.py  rag_pipeline.py
config/: settings.py
database/: docker-compose.yml  init.sql  seeder.sh
discord/: bot.py  bot_reloader.py  gemini_bot.py  weather_mcp.py
doc/: info.md
gemini/: cli.py  discord_bot.py  example_server.py  gemini_mcp_client.py  mcp_servers.json  output.txt  tests_client.py
mcp-learning/: config.json  hello_mcp.py
mcsp-server-test/: README.md  server.py
src/: .gitignore  authenticate.py  pyproject.toml
src/chunking/: semantic_chunker.py
src/document_loaders/: __init__.py  file_ingestion.py
src/embeddings/: base.py  sentence_transformer.py
src/generation/: gemini_generator.py
src/pipeline/: ingestion.py  query.py
src/retrieval/: retriever.py
src/servers/: authorize.py  calendar_integration.py
src/vector_store/: pinecone_store.py
tests/: test_embeddings.py  test_integration.py  test_loaders.py
tests/fixtures/: sample.md  sample.txt
week_2_task/: weather_server.py
