[project]
name = "rag-implementation"
version = "0.1.0"
description = "RAG (Retrieval-Augmented Generation) system with dual embedding support, LangChain, Pinecone, and Gemini"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-google-genai>=1.0.0",
    "langchain-pinecone>=0.1.0",
    "langchain-text-splitters>=0.0.1",
    "langchain-experimental>=0.0.1",
    "pinecone>=5.0.0",
    "sentence-transformers>=2.2.0",
    "google-generativeai>=0.3.0",
    "pypdf>=3.17.0",
    "pymupdf>=1.23.0",
    "pymupdf4llm>=0.0.8",
    "markdown>=3.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "torch>=2.0.0",
    "langchain-pymupdf4llm>=0.4.1",
]
